# LibraryExercise

./: Book.cpp  BookLibrary.cpp  BookLibrary.hpp  CMakeLists.txt  README.md  TextUI.cpp
include/: Book.hpp  ResultEnums.hpp  TextUI.hpp
src/: BookLibrary.cpp  TextUI.cpp  main.cpp
